--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-use-pagination": "2.0.1",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
+    "redux-persist": "6.0.0",
     "sass": "^1.48.0",
     "web-vitals": "^2.1.3"
   },
