--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "icons": "1.0.0",
     "immer": "^9.0.12",
     "immutable": "^4.0.0",
+    "logrocket": "2.2.0",
     "moment": "2.29.1",
     "moment-timezone": "0.5.34",
     "prop-types": "^15.8.1",
